# crew_generator

./: README.md  agents.py  main.py  output.txt  pyproject.toml  tasks.py
db/: chroma.sqlite3
