[tool.poetry]
name = "crew-generator"
version = "0.1.0"
description = "Generates details of agents, tasks and tools based on a goal you wish to achieve"
authors = ["Muhammad Ismaila ismailamuhammadabba@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12"
crewai = "^0.11.0"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = "1.0.0"
setuptools = "^78.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"